--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ html, body {
 }
 
 header {
-  background: #0099ff;
+  background: #2563eb;
   box-shadow: var(--shadow);
   padding: 2.5rem 1rem 2rem 1rem;
   text-align: center;
